<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Free Chess</string>
    <string name="resign_button">Resign</string>
    <string name="quit">Exit Game</string>
    <string name="rematch">Rematch</string>
    <string name="listen_button">Listen</string>
    <string name="connect_button">Connect</string>
    <string name="start_button">Start Game</string>
    <string name="news_button">Chess News</string>
    <string name="settings_button">⚙</string>
    <string name="end_of_game">End of game</string>
    <string name="winner">Winner</string>
</resources>